--- a/pipeline/1_translate_title.ipynb
+++ b/pipeline/1_translate_title.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1: Translate title from French to English"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the phrase grounding models selected were trained on English captions, the titles of the images need to be translated from French to English. A pretrained machine learning model, [MarianMT](https://huggingface.co/Helsinki-NLP/opus-mt-fr-en), which is a multilingual machine translation model trained on the on the [OPUS](https://opus.nlpl.eu/) corpus, is used for this purpose."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -12,6 +28,14 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll be using Helsinki-NLP's [opus-mt](https://huggingface.co/Helsinki-NLP) model to translate the titles from French to English."
    ]
   },
   {
@@ -222,7 +246,8 @@
    "source": [
     "# Read sqlite query results into a pandas DataFrame\n",
     "con = sqlite3.connect(\"../data/BCU_database/bcu_caption.db\")\n",
-    "Photo = pd.read_sql_query(\"SELECT * from Photo\", con)\n",
+    "Photo = pd.read_sql_query(\"SELECT * from Photo\", con) \n",
+    "con.close()\n",
     "\n",
     "# Verify that result of SQL query is stored in the dataframe\n",
     "Photo.head()"
