--- a/pipeline/2_expression_preprocessing.ipynb
+++ b/pipeline/2_expression_preprocessing.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2: Expression preprocessing"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first link the *bcu_id* to the filenames. \n",
+    "\n",
+    "Then the captions and titles are preprocessed in preparation for phrase grounding. This is achieved by converting the text to lowercase and removing expressions such as \"a picture of\", \"a view of\" and \"a photograph of\". As this dataset consists of images from Fribourg, there are many mentions of Fribourg in the title, which can potentially confuse the phrase grounding models. Therefore, it was decided to remove these mentions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -174,219 +192,59 @@
        "      <td>elderly (aloïs catillaz), felsenegg, wünnewil</td>\n",
        "      <td>a man sitting on a bench.</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2211</th>\n",
-       "      <td>2212</td>\n",
-       "      <td>VIBU_00758</td>\n",
-       "      <td>Ouvriers dans les ateliers de la nouvelle tuil...</td>\n",
-       "      <td>Workers in the workshops of the new tile facto...</td>\n",
-       "      <td>photograph of a group of men working on a mach...</td>\n",
-       "      <td>1932</td>\n",
-       "      <td>1932</td>\n",
-       "      <td>Buchs, Victor</td>\n",
-       "      <td>Buchs, Victor</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Question de la modernité - tension ville-campagne</td>\n",
-       "      <td>VIBU_00758_2k_324w.jpg</td>\n",
-       "      <td>workers in the workshops of the new tile facto...</td>\n",
-       "      <td>a group of men working on a machine.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2212</th>\n",
-       "      <td>2213</td>\n",
-       "      <td>VIBU_00800</td>\n",
-       "      <td>Funérailles du conseiller d'Etat Georges Pytho...</td>\n",
-       "      <td>Funeral of the State Councillor Georges Python...</td>\n",
-       "      <td>photograph of politician walking down the street.</td>\n",
-       "      <td>1927</td>\n",
-       "      <td>1927</td>\n",
-       "      <td>Buchs, Victor</td>\n",
-       "      <td>Buchs, Victor</td>\n",
-       "      <td>Fribourg</td>\n",
-       "      <td>Question politique - droite conservatrice</td>\n",
-       "      <td>VIBU_00800_2k_324w.jpg</td>\n",
-       "      <td>funeral of the state councillor georges python...</td>\n",
-       "      <td>politician walking down the street.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2213</th>\n",
-       "      <td>2214</td>\n",
-       "      <td>VIBU_00823</td>\n",
-       "      <td>Femmes détenues au pénitentier de Bellechasse ...</td>\n",
-       "      <td>Women held at Bellechasse Penitentiary for the...</td>\n",
-       "      <td>photograph of a group of people working in a f...</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>Buchs, Victor</td>\n",
-       "      <td>Buchs, Victor</td>\n",
-       "      <td>Bellechasse</td>\n",
-       "      <td>Question sociale - justice-criminalité</td>\n",
-       "      <td>VIBU_00823_2k_324w.jpg</td>\n",
-       "      <td>women held at bellechasse penitentiary for the...</td>\n",
-       "      <td>a group of people working in a field.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2214</th>\n",
-       "      <td>2215</td>\n",
-       "      <td>aueg_00004</td>\n",
-       "      <td>None</td>\n",
-       "      <td></td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Question de genre - représentations du féminin</td>\n",
-       "      <td>AUEG_00004_2k_324w.jpg</td>\n",
-       "      <td></td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2215</th>\n",
-       "      <td>2216</td>\n",
-       "      <td>here_04649</td>\n",
-       "      <td>None</td>\n",
-       "      <td></td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Question de genre - représentations du féminin</td>\n",
-       "      <td>None</td>\n",
-       "      <td></td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2216 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id      bcu_id                                              title  \\\n",
-       "0        1   ALBL00222                   Singine, Sense, Düdingen, moulin   \n",
-       "1        2  ALCU_00005  Inauguration de la plaque commémorative au mur...   \n",
-       "2        3  ALCU_00009  Marché à la Place Notre-Dame, autour de la fon...   \n",
-       "3        4  ALCU_00033  Patient du Dr Xavier Cuony, physicien de ville...   \n",
-       "4        5  ALNU_00015    Homme âgé (Aloïs Catillaz), Felsenegg, Wünnewil   \n",
-       "...    ...         ...                                                ...   \n",
-       "2211  2212  VIBU_00758  Ouvriers dans les ateliers de la nouvelle tuil...   \n",
-       "2212  2213  VIBU_00800  Funérailles du conseiller d'Etat Georges Pytho...   \n",
-       "2213  2214  VIBU_00823  Femmes détenues au pénitentier de Bellechasse ...   \n",
-       "2214  2215  aueg_00004                                               None   \n",
-       "2215  2216  here_04649                                               None   \n",
+       "   id      bcu_id                                              title  \\\n",
+       "0   1   ALBL00222                   Singine, Sense, Düdingen, moulin   \n",
+       "1   2  ALCU_00005  Inauguration de la plaque commémorative au mur...   \n",
+       "2   3  ALCU_00009  Marché à la Place Notre-Dame, autour de la fon...   \n",
+       "3   4  ALCU_00033  Patient du Dr Xavier Cuony, physicien de ville...   \n",
+       "4   5  ALNU_00015    Homme âgé (Aloïs Catillaz), Felsenegg, Wünnewil   \n",
        "\n",
-       "                                               title_en  \\\n",
-       "0                        Singine, Sense, Düdingen, mill   \n",
-       "1     Inauguration of the commemorative plaque on th...   \n",
-       "2     Marché à la Place Notre-Dame, autour de la fou...   \n",
-       "3     Patient of Dr Xavier Cuony, city physicist, Fr...   \n",
-       "4         Elderly (Aloïs Catillaz), Felsenegg, Wünnewil   \n",
-       "...                                                 ...   \n",
-       "2211  Workers in the workshops of the new tile facto...   \n",
-       "2212  Funeral of the State Councillor Georges Python...   \n",
-       "2213  Women held at Bellechasse Penitentiary for the...   \n",
-       "2214                                                      \n",
-       "2215                                                      \n",
+       "                                            title_en  \\\n",
+       "0                     Singine, Sense, Düdingen, mill   \n",
+       "1  Inauguration of the commemorative plaque on th...   \n",
+       "2  Marché à la Place Notre-Dame, autour de la fou...   \n",
+       "3  Patient of Dr Xavier Cuony, city physicist, Fr...   \n",
+       "4      Elderly (Aloïs Catillaz), Felsenegg, Wünnewil   \n",
        "\n",
-       "                                                caption year_from year_to  \\\n",
-       "0                              aerial view of the town.      1952    1952   \n",
-       "1                    crowds gather to watch the parade.      1900    1900   \n",
-       "2                          a city in the past, history.      1900    1900   \n",
-       "3                        painting artist in his studio.      1895    1910   \n",
-       "4                 portrait of a man sitting on a bench.      1885    1900   \n",
-       "...                                                 ...       ...     ...   \n",
-       "2211  photograph of a group of men working on a mach...      1932    1932   \n",
-       "2212  photograph of politician walking down the street.      1927    1927   \n",
-       "2213  photograph of a group of people working in a f...      1930    1933   \n",
-       "2214                                               None      None    None   \n",
-       "2215                                               None      None    None   \n",
+       "                                 caption year_from year_to  photographer_name  \\\n",
+       "0               aerial view of the town.      1952    1952               None   \n",
+       "1     crowds gather to watch the parade.      1900    1900      Cuony, Xavier   \n",
+       "2           a city in the past, history.      1900    1900      Cuony, Xavier   \n",
+       "3         painting artist in his studio.      1895    1910      Cuony, Xavier   \n",
+       "4  portrait of a man sitting on a bench.      1885    1900  Nussbaumer, Aloïs   \n",
        "\n",
-       "      photographer_name                      fund_name     locality  \\\n",
-       "0                  None  Aéroport Lausanne Blécherette     Düdingen   \n",
-       "1         Cuony, Xavier        Cuony, Xavier et Albert     Fribourg   \n",
-       "2         Cuony, Xavier        Cuony, Xavier et Albert     Fribourg   \n",
-       "3         Cuony, Xavier        Cuony, Xavier et Albert     Fribourg   \n",
-       "4     Nussbaumer, Aloïs              Nussbaumer, Aloïs     Wünnewil   \n",
-       "...                 ...                            ...          ...   \n",
-       "2211      Buchs, Victor                  Buchs, Victor         None   \n",
-       "2212      Buchs, Victor                  Buchs, Victor     Fribourg   \n",
-       "2213      Buchs, Victor                  Buchs, Victor  Bellechasse   \n",
-       "2214               None                           None         None   \n",
-       "2215               None                           None         None   \n",
+       "                       fund_name  locality  \\\n",
+       "0  Aéroport Lausanne Blécherette  Düdingen   \n",
+       "1        Cuony, Xavier et Albert  Fribourg   \n",
+       "2        Cuony, Xavier et Albert  Fribourg   \n",
+       "3        Cuony, Xavier et Albert  Fribourg   \n",
+       "4              Nussbaumer, Aloïs  Wünnewil   \n",
        "\n",
-       "                                                  theme  \\\n",
-       "0           Question de la modernité - urbanisme tardif   \n",
-       "1                       Question religieuse - formation   \n",
-       "2               Question de la modernité - alimentation   \n",
-       "3                      Question de la modernité - santé   \n",
-       "4                                      Question sociale   \n",
-       "...                                                 ...   \n",
-       "2211  Question de la modernité - tension ville-campagne   \n",
-       "2212          Question politique - droite conservatrice   \n",
-       "2213             Question sociale - justice-criminalité   \n",
-       "2214     Question de genre - représentations du féminin   \n",
-       "2215     Question de genre - représentations du féminin   \n",
+       "                                         theme                filename  \\\n",
+       "0  Question de la modernité - urbanisme tardif   ALBL00222_2k_324w.jpg   \n",
+       "1              Question religieuse - formation  ALCU_00005_2k_324w.jpg   \n",
+       "2      Question de la modernité - alimentation  ALCU_00009_2k_324w.jpg   \n",
+       "3             Question de la modernité - santé  ALCU_00033_2k_324w.jpg   \n",
+       "4                             Question sociale  ALNU_00015_2k_324w.jpg   \n",
        "\n",
-       "                    filename  \\\n",
-       "0      ALBL00222_2k_324w.jpg   \n",
-       "1     ALCU_00005_2k_324w.jpg   \n",
-       "2     ALCU_00009_2k_324w.jpg   \n",
-       "3     ALCU_00033_2k_324w.jpg   \n",
-       "4     ALNU_00015_2k_324w.jpg   \n",
-       "...                      ...   \n",
-       "2211  VIBU_00758_2k_324w.jpg   \n",
-       "2212  VIBU_00800_2k_324w.jpg   \n",
-       "2213  VIBU_00823_2k_324w.jpg   \n",
-       "2214  AUEG_00004_2k_324w.jpg   \n",
-       "2215                    None   \n",
+       "                               title_en_preprocessed  \\\n",
+       "0                     singine, sense, düdingen, mill   \n",
+       "1  inauguration of the commemorative plaque on th...   \n",
+       "2  marché à la place notre-dame, autour de la fou...   \n",
+       "3       patient of dr xavier cuony, city physicist,    \n",
+       "4      elderly (aloïs catillaz), felsenegg, wünnewil   \n",
        "\n",
-       "                                  title_en_preprocessed  \\\n",
-       "0                        singine, sense, düdingen, mill   \n",
-       "1     inauguration of the commemorative plaque on th...   \n",
-       "2     marché à la place notre-dame, autour de la fou...   \n",
-       "3          patient of dr xavier cuony, city physicist,    \n",
-       "4         elderly (aloïs catillaz), felsenegg, wünnewil   \n",
-       "...                                                 ...   \n",
-       "2211  workers in the workshops of the new tile facto...   \n",
-       "2212  funeral of the state councillor georges python...   \n",
-       "2213  women held at bellechasse penitentiary for the...   \n",
-       "2214                                                      \n",
-       "2215                                                      \n",
-       "\n",
-       "                       caption_preprocessed  \n",
-       "0                                      None  \n",
-       "1        crowds gather to watch the parade.  \n",
-       "2                                      None  \n",
-       "3            painting artist in his studio.  \n",
-       "4                 a man sitting on a bench.  \n",
-       "...                                     ...  \n",
-       "2211   a group of men working on a machine.  \n",
-       "2212    politician walking down the street.  \n",
-       "2213  a group of people working in a field.  \n",
-       "2214                                   None  \n",
-       "2215                                   None  \n",
-       "\n",
-       "[2216 rows x 14 columns]"
+       "                 caption_preprocessed  \n",
+       "0                                None  \n",
+       "1  crowds gather to watch the parade.  \n",
+       "2                                None  \n",
+       "3      painting artist in his studio.  \n",
+       "4           a man sitting on a bench.  "
       ]
      },
      "execution_count": 3,
@@ -401,16 +259,17 @@
     "\n",
     "# Verify that result of SQL query is stored in the dataframe\n",
     "print('original number of picture :',len(Photo))\n",
-    "Photo"
+    "Photo.head()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "Get all the images"
+    "## Match bcu_id to filenames"
    ]
   },
   {
@@ -539,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Oct 24 2022, 16:07:47) [GCC 11.2.0]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
