--- a/pipeline/6_selection_best_phrase_grounding.ipynb
+++ b/pipeline/6_selection_best_phrase_grounding.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6: Selection of best phrase grounding\n",
+    "\n",
+    "Each image has four phrase grounding results: two from the caption and two from the title, as it has been run on GLIP and MDETR. The best phrase grounding results are selected using a user-friendly GUI. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -459,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Oct 24 2022, 16:07:47) [GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
