--- a/pipeline/6_selection_best_phrase_grounding.ipynb
+++ b/pipeline/6_selection_best_phrase_grounding.ipynb
@@ -161,7 +161,7 @@
     "    return ax\n",
     "\n",
     "\n",
-    "def det_nms(segmentation_array):\n",
+    "def labelwise_nms(segmentation_array):\n",
     "    segmentation_array_ = []\n",
     "    for i, elem in enumerate(segmentation_array):\n",
     "        segmentation_array_.append(list(elem))\n",
@@ -190,7 +190,7 @@
     "    return seg_filtered\n",
     "\n",
     "\n",
-    "def global_det_nms(segmentation_array):\n",
+    "def global_nms(segmentation_array):\n",
     "    segmentation_array_ = []\n",
     "    for i, elem in enumerate(segmentation_array):\n",
     "        segmentation_array_.append(list(elem))\n",
@@ -229,10 +229,10 @@
    },
    "outputs": [],
    "source": [
-    "MDETR_caption = global_det_nms(det_nms(MDETR_caption))\n",
-    "MDETR_title = global_det_nms(det_nms(MDETR_title))\n",
-    "GLIP_caption = global_det_nms(det_nms(GLIP_caption))\n",
-    "GLIP_title = global_det_nms(det_nms(GLIP_title))"
+    "MDETR_caption = global_nms(labelwise_nms(MDETR_caption))\n",
+    "MDETR_title = global_nms(labelwise_nms(MDETR_title))\n",
+    "GLIP_caption = global_nms(labelwise_nms(GLIP_caption))\n",
+    "GLIP_title = global_nms(labelwise_nms(GLIP_title))"
    ]
   },
   {
