Updated colab demo notebook

--- a/pipeline/notebooks/segmentation_demo.ipynb
+++ b/pipeline/notebooks/segmentation_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPV+U9gV5z34RVBTRicuG3M",
+      "authorship_tag": "ABX9TyPIRxtMpZy5YbH4wc2gFkgt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "yeqUa3y45Lrq",
         "outputId": "a8319a82-08b7-4573-ce80-2d2f08dc0f18",
@@ -116,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "I4ve_0xqBq1v"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
           "height": 238
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -229,7 +229,7 @@
           "height": 238
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "voYa_-hYDYJ6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
           "height": 217
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -319,7 +319,7 @@
           "height": 217
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "z4xqOsUdMiUJ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -378,7 +378,7 @@
           "height": 238
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -408,7 +408,7 @@
           "height": 238
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -472,7 +472,7 @@
           "height": 488
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -510,7 +510,7 @@
           "height": 234
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +546,7 @@
           "height": 255
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Not only the deep learning segmentation model is up to eleven time faster than GrabCut, but it also gives better results. In color images, its segmentations are slightly better. In Black & White images, GrabCut doesn't succeed to perform segmentation whereas our model performs as good as on a RGB image.**"
+        "**Not only the deep learning segmentation model is up to eight time faster than GrabCut, but it also gives better results. In color images, its segmentations are slightly better. In Black & White images, GrabCut doesn't succeed to perform segmentation whereas our model performs as good as on a RGB image.**"
       ],
       "metadata": {
         "id": "6L75RxFIIAZa"
